--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-# This template is a low-dependency template. 
-# By default there is no requirements added here.
-# Add the requirements you need to this file.
-# or run `make init` to create this file automatically based on the template.
-# You can also run `make switch-to-poetry` to use the poetry package manager.
+pytest=7.2.0
+numpy==1.23.5
+click==8.1.3
+dill==0.3.6
+pillow=9.3.0
+torch==1.13.0
+pytorch-lightning=1.8.3
+torchvision=0.14.0
+grpcio==1.51.1
+grpcio-tools==1.44.0
