--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pytest=7.2.0
+pytest==7.2.0
 numpy==1.23.5
 click==8.1.3
 dill==0.3.6
-pillow=9.3.0
+pillow==9.3.0
 torch==1.13.0
-pytorch-lightning=1.8.3
-torchvision=0.14.0
+pytorch-lightning==1.8.3
+torchvision==0.14.0
 grpcio==1.51.1
 grpcio-tools==1.44.0
