--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.3
 dill==0.3.6
 pillow==9.3.0
 torch==1.13.0
+torchsummary==1.5.1
 pytorch-lightning==1.8.3
 torchvision==0.14.0
 grpcio==1.51.1
